[gd_scene load_steps=4 format=2]

[ext_resource path="res://PersonalityQuiz.gd" type="Script" id=1]
[ext_resource path="res://images/backgrounds/personalityscreen.png" type="Texture" id=2]
[ext_resource path="res://fonts/opensans_30.tres" type="DynamicFont" id=3]

[node name="PersonalityQuiz" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="background" type="Sprite" parent="."]
position = Vector2( 320.499, 240.374 )
texture = ExtResource( 2 )

[node name="Options" type="GridContainer" parent="."]
editor/display_folded = true
margin_left = 96.0
margin_top = 181.0
margin_right = 581.0
margin_bottom = 491.0
columns = 4

[node name="Button1" type="Button" parent="Options"]
margin_right = 200.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
text = "Option 1"

[node name="Label" type="Label" parent="Options"]
margin_left = 204.0
margin_top = 4.0
margin_right = 236.0
margin_bottom = 35.0
text = "
"

[node name="Button2" type="Button" parent="Options"]
margin_left = 240.0
margin_right = 440.0
margin_bottom = 40.0
rect_min_size = Vector2( 200, 40 )
text = "Option 1"

[node name="Label4" type="Label" parent="Options"]
margin_left = 444.0
margin_top = 4.0
margin_right = 476.0
margin_bottom = 35.0
text = "        
		"

[node name="Label3" type="Label" parent="Options"]
margin_top = 44.0
margin_right = 200.0
margin_bottom = 75.0
text = "        
		"

[node name="Label2" type="Label" parent="Options"]
margin_left = 204.0
margin_top = 44.0
margin_right = 236.0
margin_bottom = 75.0
text = "        
		"

[node name="Label7" type="Label" parent="Options"]
margin_left = 240.0
margin_top = 44.0
margin_right = 440.0
margin_bottom = 75.0
text = "        
		"

[node name="Label5" type="Label" parent="Options"]
margin_left = 444.0
margin_top = 44.0
margin_right = 476.0
margin_bottom = 75.0
text = "        
		"

[node name="Button3" type="Button" parent="Options"]
margin_top = 79.0
margin_right = 200.0
margin_bottom = 119.0
rect_min_size = Vector2( 200, 40 )
text = "Option 1"

[node name="Label6" type="Label" parent="Options"]
margin_left = 204.0
margin_top = 83.0
margin_right = 236.0
margin_bottom = 114.0
text = "        
		"

[node name="Button4" type="Button" parent="Options"]
margin_left = 240.0
margin_top = 79.0
margin_right = 440.0
margin_bottom = 119.0
rect_min_size = Vector2( 200, 40 )
text = "Option 1"

[node name="Label12" type="Label" parent="Options"]
margin_left = 444.0
margin_top = 83.0
margin_right = 476.0
margin_bottom = 114.0
text = "        
		"

[node name="Label11" type="Label" parent="Options"]
margin_top = 123.0
margin_right = 200.0
margin_bottom = 154.0
text = "        
		"

[node name="Label10" type="Label" parent="Options"]
margin_left = 204.0
margin_top = 123.0
margin_right = 236.0
margin_bottom = 154.0
text = "        
		"

[node name="Label9" type="Label" parent="Options"]
margin_left = 240.0
margin_top = 123.0
margin_right = 440.0
margin_bottom = 154.0
text = "        
		"

[node name="Label8" type="Label" parent="Options"]
margin_left = 444.0
margin_top = 123.0
margin_right = 476.0
margin_bottom = 154.0
text = "        
		"

[node name="Button5" type="Button" parent="Options"]
margin_top = 158.0
margin_right = 200.0
margin_bottom = 198.0
rect_min_size = Vector2( 200, 40 )
text = "Option 1"

[node name="Label13" type="Label" parent="Options"]
margin_left = 204.0
margin_top = 162.0
margin_right = 236.0
margin_bottom = 193.0
text = "        
		"

[node name="Button6" type="Button" parent="Options"]
margin_left = 240.0
margin_top = 158.0
margin_right = 440.0
margin_bottom = 198.0
rect_min_size = Vector2( 200, 40 )
text = "Option 1"

[node name="Label14" type="Label" parent="Options"]
margin_left = 444.0
margin_top = 162.0
margin_right = 476.0
margin_bottom = 193.0
text = "        
		"

[node name="Label15" type="Label" parent="Options"]
margin_top = 202.0
margin_right = 200.0
margin_bottom = 233.0
text = "        
		"

[node name="Label16" type="Label" parent="Options"]
margin_left = 204.0
margin_top = 202.0
margin_right = 236.0
margin_bottom = 233.0
text = "        
		"

[node name="Label17" type="Label" parent="Options"]
margin_left = 240.0
margin_top = 202.0
margin_right = 440.0
margin_bottom = 233.0
text = "        
		"

[node name="Label18" type="Label" parent="Options"]
margin_left = 444.0
margin_top = 202.0
margin_right = 476.0
margin_bottom = 233.0
text = "        
		"

[node name="Button7" type="Button" parent="Options"]
visible = false
margin_top = 237.0
margin_right = 200.0
margin_bottom = 277.0
rect_min_size = Vector2( 200, 40 )
text = "Option 1"

[node name="Label" type="Label" parent="."]
margin_left = 1.0
margin_top = 95.0
margin_right = 638.0
margin_bottom = 182.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "If you had a superpower, what would it be?"
align = 1

[node name="Button" type="Button" parent="."]
margin_left = 229.707
margin_top = 284.851
margin_right = 398.707
margin_bottom = 326.851
text = "Continue"

[node name="Button8" type="Button" parent="."]
margin_left = 231.422
margin_top = 347.439
margin_right = 400.422
margin_bottom = 389.439
text = "Retry"

[node name="Label2" type="Label" parent="."]
margin_left = 2.0
margin_top = 160.0
margin_right = 639.0
margin_bottom = 212.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 315.083, 243.921 )
scale = Vector2( 3.3083, 2.67187 )
[connection signal="pressed" from="Options/Button1" to="." method="_on_Button1_pressed"]
[connection signal="pressed" from="Options/Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Options/Button3" to="." method="_on_Button3_pressed"]
[connection signal="pressed" from="Options/Button4" to="." method="_on_Button4_pressed"]
[connection signal="pressed" from="Options/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="Options/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="Options/Button7" to="." method="_on_Button7_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button8" to="." method="_on_Button8_pressed"]
